--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,15 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Portfolio - Codewunder">
     <meta property="og:description" content="Se você está pensando em contratar um dev dedicado e que procura sempre se aprimorar, você veio ao lugar certo!">
-    <meta property="og:image" content="https://portfolio-joaotulio.vercel.app/img/foto_antiga.jpg">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.webp">
+    <meta property="og:image:type" content="image/webp">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website">
     <meta property="og:type" content="article">
     <meta property="article:author" content="CodeWunder">
     <meta property="article:published_time" content="date_time">
-    <meta property="og:locale" content="pt_BR">
+    <meta property="og:locale" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Se você está pensando em contratar um dev dedicado e que procura sempre se aprimorar, você veio ao lugar certo!" />
 </head>
