--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Portfolio - Codewunder</title>
     <meta charset="utf-8" />
     <meta property="og:title" content="Portfolio - Codewunder">
-    <meta property="og:description" content="Se você está pensando em contratar um dev dedicado e que procura sempre se aprimorar, você veio ao lugar certo!">
+    <meta property="og:description" content="Iwara Wisdom is a Web Virtuoso crafting digital symphonies for startups using using a harmonious blend of Web Development prowess sprinkled with a dash of UI/UX Finesse.">
     <meta property="og:image" content="%PUBLIC_URL%/thumbnail.webp">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:width" content="800">
@@ -22,7 +22,7 @@
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Se você está pensando em contratar um dev dedicado e que procura sempre se aprimorar, você veio ao lugar certo!" />
+    <meta name="description" content="Iwara Wisdom is a Web Virtuoso crafting digital symphonies for startups using using a harmonious blend of Web Development prowess sprinkled with a dash of UI/UX Finesse." />
 </head>
 
 <body>
